@@ -340,6 +340,20 @@ name|hadoop
 operator|.
 name|mapred
 operator|.
+name|IFileOutputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
 name|JobConf
 import|;
 end_import
@@ -2479,6 +2493,473 @@ argument_list|,
 literal|true
 argument_list|,
 literal|false
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testCopyFromHostExtraBytes ()
+specifier|public
+name|void
+name|testCopyFromHostExtraBytes
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Fetcher
+argument_list|<
+name|Text
+argument_list|,
+name|Text
+argument_list|>
+name|underTest
+init|=
+operator|new
+name|FakeFetcher
+argument_list|<
+name|Text
+argument_list|,
+name|Text
+argument_list|>
+argument_list|(
+name|job
+argument_list|,
+name|id
+argument_list|,
+name|ss
+argument_list|,
+name|mm
+argument_list|,
+name|r
+argument_list|,
+name|metrics
+argument_list|,
+name|except
+argument_list|,
+name|key
+argument_list|,
+name|connection
+argument_list|)
+decl_stmt|;
+name|String
+name|replyHash
+init|=
+name|SecureShuffleUtils
+operator|.
+name|generateHash
+argument_list|(
+name|encHash
+operator|.
+name|getBytes
+argument_list|()
+argument_list|,
+name|key
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|connection
+operator|.
+name|getResponseCode
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+literal|200
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|connection
+operator|.
+name|getHeaderField
+argument_list|(
+name|ShuffleHeader
+operator|.
+name|HTTP_HEADER_NAME
+argument_list|)
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|ShuffleHeader
+operator|.
+name|DEFAULT_HTTP_HEADER_NAME
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|connection
+operator|.
+name|getHeaderField
+argument_list|(
+name|ShuffleHeader
+operator|.
+name|HTTP_HEADER_VERSION
+argument_list|)
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|ShuffleHeader
+operator|.
+name|DEFAULT_HTTP_HEADER_VERSION
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|connection
+operator|.
+name|getHeaderField
+argument_list|(
+name|SecureShuffleUtils
+operator|.
+name|HTTP_HEADER_REPLY_URL_HASH
+argument_list|)
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|replyHash
+argument_list|)
+expr_stmt|;
+name|ShuffleHeader
+name|header
+init|=
+operator|new
+name|ShuffleHeader
+argument_list|(
+name|map1ID
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|14
+argument_list|,
+literal|10
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|ByteArrayOutputStream
+name|bout
+init|=
+operator|new
+name|ByteArrayOutputStream
+argument_list|()
+decl_stmt|;
+name|DataOutputStream
+name|dos
+init|=
+operator|new
+name|DataOutputStream
+argument_list|(
+name|bout
+argument_list|)
+decl_stmt|;
+name|IFileOutputStream
+name|ios
+init|=
+operator|new
+name|IFileOutputStream
+argument_list|(
+name|dos
+argument_list|)
+decl_stmt|;
+name|header
+operator|.
+name|write
+argument_list|(
+name|dos
+argument_list|)
+expr_stmt|;
+name|ios
+operator|.
+name|write
+argument_list|(
+literal|"MAPDATA123"
+operator|.
+name|getBytes
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ios
+operator|.
+name|finish
+argument_list|()
+expr_stmt|;
+name|ShuffleHeader
+name|header2
+init|=
+operator|new
+name|ShuffleHeader
+argument_list|(
+name|map2ID
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|14
+argument_list|,
+literal|10
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|IFileOutputStream
+name|ios2
+init|=
+operator|new
+name|IFileOutputStream
+argument_list|(
+name|dos
+argument_list|)
+decl_stmt|;
+name|header2
+operator|.
+name|write
+argument_list|(
+name|dos
+argument_list|)
+expr_stmt|;
+name|ios2
+operator|.
+name|write
+argument_list|(
+literal|"MAPDATA456"
+operator|.
+name|getBytes
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ios2
+operator|.
+name|finish
+argument_list|()
+expr_stmt|;
+name|ByteArrayInputStream
+name|in
+init|=
+operator|new
+name|ByteArrayInputStream
+argument_list|(
+name|bout
+operator|.
+name|toByteArray
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|connection
+operator|.
+name|getInputStream
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|in
+argument_list|)
+expr_stmt|;
+comment|// 8< 10 therefore there appear to be extra bytes in the IFileInputStream
+name|InMemoryMapOutput
+argument_list|<
+name|Text
+argument_list|,
+name|Text
+argument_list|>
+name|mapOut
+init|=
+operator|new
+name|InMemoryMapOutput
+argument_list|<
+name|Text
+argument_list|,
+name|Text
+argument_list|>
+argument_list|(
+name|job
+argument_list|,
+name|map1ID
+argument_list|,
+name|mm
+argument_list|,
+literal|8
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|InMemoryMapOutput
+argument_list|<
+name|Text
+argument_list|,
+name|Text
+argument_list|>
+name|mapOut2
+init|=
+operator|new
+name|InMemoryMapOutput
+argument_list|<
+name|Text
+argument_list|,
+name|Text
+argument_list|>
+argument_list|(
+name|job
+argument_list|,
+name|map2ID
+argument_list|,
+name|mm
+argument_list|,
+literal|10
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|mm
+operator|.
+name|reserve
+argument_list|(
+name|eq
+argument_list|(
+name|map1ID
+argument_list|)
+argument_list|,
+name|anyLong
+argument_list|()
+argument_list|,
+name|anyInt
+argument_list|()
+argument_list|)
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|mapOut
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|mm
+operator|.
+name|reserve
+argument_list|(
+name|eq
+argument_list|(
+name|map2ID
+argument_list|)
+argument_list|,
+name|anyLong
+argument_list|()
+argument_list|,
+name|anyInt
+argument_list|()
+argument_list|)
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|mapOut2
+argument_list|)
+expr_stmt|;
+name|underTest
+operator|.
+name|copyFromHost
+argument_list|(
+name|host
+argument_list|)
+expr_stmt|;
+name|verify
+argument_list|(
+name|allErrs
+argument_list|)
+operator|.
+name|increment
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|verify
+argument_list|(
+name|ss
+argument_list|)
+operator|.
+name|copyFailed
+argument_list|(
+name|map1ID
+argument_list|,
+name|host
+argument_list|,
+literal|true
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|verify
+argument_list|(
+name|ss
+argument_list|,
+name|never
+argument_list|()
+argument_list|)
+operator|.
+name|copyFailed
+argument_list|(
+name|map2ID
+argument_list|,
+name|host
+argument_list|,
+literal|true
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|verify
+argument_list|(
+name|ss
+argument_list|)
+operator|.
+name|putBackKnownMapOutput
+argument_list|(
+name|any
+argument_list|(
+name|MapHost
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|eq
+argument_list|(
+name|map1ID
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|verify
+argument_list|(
+name|ss
+argument_list|)
+operator|.
+name|putBackKnownMapOutput
+argument_list|(
+name|any
+argument_list|(
+name|MapHost
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|eq
+argument_list|(
+name|map2ID
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
