@@ -160,6 +160,9 @@ Release 2.5.0 - UNRELEASED
 
     MAPREDUCE-5713. InputFormat and JobConf JavaDoc Fixes (Chen He via jeagles)
 
+    MAPREDUCE-5456. TestFetcher.testCopyFromHostExtraBytes is missing (Jason
+    Lowe via jeagles)
+
   OPTIMIZATIONS
 
   BUG FIXES 
